fixed text alignment to center in main hero, ohio container

--- a/assets/states/ohio/ohio.css
+++ b/assets/states/ohio/ohio.css
@@ -108,6 +108,7 @@ h4 {
     background-color: #fff;
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     cursor: pointer;
+
   }
   .input-box.open{
     max-width: 240px;
@@ -380,5 +381,24 @@ h4 {
 .redLgFnt {
   color: red;
   font-size: 22px;
+}
+
+
+
+.ohio {
+
+  font-size: 70px;
+  display: flex;
+  justify-content: center;
+}
+
+#ohioHero h4 {
+text-align: center;
+  padding: 0;
+}
+
+#ohioHero .about__description {
+  text-align: center;
+  margin-top: 16px;
 }
 
